--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ header {
 .service-tabs-01, .service-tabs-03, .service-tabs-04 {
     display: flex;
     width: 100%;
-    height: 300px;
+    height: 500px;
 }
 
 .service-tabs-01-introduce, .service-tabs-01-image, .service-tabs-03-introduce, .service-tabs-03-image, .service-tabs-04-introduce, .service-tabs-04-image {
@@ -223,9 +223,11 @@ header {
 
 .service-tabs-02 {
     display: flex;
+    flex-direction: row;
     width: 100%;
-    height: 150px;
+    height: auto;
     margin: 30px;
+    justify-content: space-between;
 }
 
 .service-tabs-02-mention, .service-tabs-02-reply, .service-tabs-02-notice {
@@ -239,21 +241,9 @@ header {
     align-items: center;
 }
 
-.service-tabs-02-mention img {
-    max-width: 80%;
-    max-height: 80%;
-    object-fit: contain;
-}
-
-.service-tabs-02-reply img {
-    max-width: 80%;
-    max-height: 80%;
-    object-fit: contain;
-}
-
-.service-tabs-02-notice img {
-    max-width: 80%;
-    max-height: 80%;
+.service-tabs-02-mention img, .service-tabs-02-reply img, .service-tabs-02-notice img {
+    max-width: 50%;
+    max-height: 50%;
     object-fit: contain;
 }
 
@@ -305,6 +295,51 @@ footer {
     padding: 15px;
     min-width: 200px;
     border: 1px solid #000;
+    display:flex;
+}
+
+.footer-company {
+    justify-content: center;
+}
+
+.footer-company .kakao {
+    font-weight: normal;
+}
+
+.footer-company .enterprise {
+    font-weight: bold;
+}
+
+.footer-sns {
+    flex: 1;
+    padding: 15px;
+    min-width: 200px;
+    border: 1px solid #000;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 10px;
+    margin-top: 0;
+}
+
+.footer-sns .social-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    font-size: 12px;
+    color: #666;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.footer-sns .social-icon img {
+    max-width: 30px;
+    max-height: 30px;
+    object-fit: contain;
 }
 
 .footer-contents {
@@ -323,6 +358,17 @@ footer {
 .footer-contents-list {
     margin-bottom: 15px;
     flex: 1;
+}
+
+.footer-contents-list a {
+    color: #000;
+    font-weight: bold;
+    text-decoration: none;
+    margin-right: 15px;
+}
+
+.footer-contents-list a:hover {
+    text-decoration: underline;
 }
 
 .footer-contents-copyright {
