--- a/style.css
+++ b/style.css
@@ -206,7 +206,14 @@ header {
 .service-tabs-01-introduce, .service-tabs-01-image, .service-tabs-03-introduce, .service-tabs-03-image, .service-tabs-04-introduce, .service-tabs-04-image {
     flex: 1;
     position: relative;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
+    overflow: hidden;
+}
+
+.service-tabs-01-introduce img, .service-tabs-01-image img, .service-tabs-03-introduce img, .service-tabs-03-image img, .service-tabs-04-introduce img, .service-tabs-04-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .service-tabs-01-introduce, .service-tabs-03-image, .service-tabs-04-introduce {
@@ -234,7 +241,7 @@ header {
     flex: 1;
     min-width: 300px;
     height: 150px;
-    border: 1px solid #ddd;
+    /* border: 1px solid #ddd; */
     margin: 10px;
     display: flex;
     justify-content: center;
@@ -253,7 +260,7 @@ header {
 
 .service-tabs-05-outer {
     width: 100%;
-    border: 2px solid #333;
+    /* border: 2px solid #333; */
     padding: 15px;
 }
 
@@ -261,25 +268,66 @@ header {
     width: 100%;
     height: 200px;
     margin-bottom: 15px;
-    border: 1px solid #000;
+    margin-left: 15px;
+    /* border: 1px solid #000; */
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
+    position: relative;
+    z-index: 1;
 }
+
+.service-tabs-05-inner-01 h2 {
+    position: absolute;
+    bottom: 20px;
+    left: 25%;
+    transform: none;
+    z-index: 2;
+}
+
 .service-tabs-05-inner-02 {
     width: 100%;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     padding: 15px;
     display: flex;
+    align-items: center;
+    overflow: hidden;
+    margin: 20px;
+    transform: translateX(-5px);
+    position: relative;
+    z-index: 0;
 }
 
 .service-tabs-05-inner-02-todolist, .service-tabs-05-inner-02-settings {
     flex: 1;
     height: 150px;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    margin: 20px;
+    transform: translateX(-5px);
+}
+
+.service-tabs-05-inner-02-todolist{
+    justify-content: right;
+}
+.service-tabs-05-inner-02-settings{
+    justify-content: left;
+}
+
+.service-tabs-05-inner-02-todolist a, .service-tabs-05-inner-02-settings a {
+    width: 65%;
+    height: 65%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.service-tabs-05-inner-02-todolist img, .service-tabs-05-inner-02-settings img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 footer {
