--- a/style.css
+++ b/style.css
@@ -335,6 +335,7 @@ footer {
     padding: 30px 20px;
     display: flex;
     flex-wrap: wrap;
+    border-top: 1px solid #ddd;
     /* border: 1px solid #000; */
 }
 
